--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -7,6 +7,10 @@ body {
     background-color: rgba(0, 0, 255, 0.521);
 }
 
+img.lado {
+    float: right;
+}
+
 main {
     background-color: white;
     width: 500px;
